add status to power control, fix identity issues, add droplet count
